--- a/index.css
+++ b/index.css
@@ -2,15 +2,23 @@ html {
   font-size: 16px;
 }
 
-a.header-logo-link,
-a.nav-link-anchor,
-a.path-link,
-a.footer-link {
+a {
   text-decoration: none;
-  /* Removes underline */
-  color: inherit;
-  /* Inherits color from parent, preserving original text color */
 }
+.path {
+  margin-left: 50px;
+  margin-top: 30px;
+  line-height: 15px;
+}
+
+.path_font {
+  font-size: 20px;
+  font-family: Jost;
+  line-height: 15px;
+  font-weight: 300;
+  color: rgb(0, 0, 0);
+}
+
 
 body {
   margin: 0;
