--- a/pages/Check_out_page/Check_out_page.css
+++ b/pages/Check_out_page/Check_out_page.css
@@ -1,16 +1,3 @@
-.path {
-  margin-left: 50px;
-  margin-top: 30px;
-  line-height: 15px;
-}
-
-.path_font {
-  font-size: 20px;
-  font-family: Jost;
-  line-height: 15px;
-  font-weight: 300;
-  color: rgb(0, 0, 0);
-}
 
 .checkout-content {
   display: flex;
@@ -26,6 +13,7 @@
   padding-right: 40px;
   display: flex;
   flex-direction: column;
+  width: 50%;
   gap: 24px;
 }
 .checkout-title {
@@ -75,15 +63,18 @@
 }
 .input-row {
   display: flex;
-  gap: 16px;
+  gap: 10px;
+  flex-wrap: wrap; 
+  width: 100%; 
 }
+
 .input-row input {
   flex: 1;
   padding: 12px;
   background: #e9e9e9;
   border: none;
   border-radius: 4px;
-}
+  box-sizing: border-box; }
 
 .with-icon {
   position: relative;
@@ -115,7 +106,6 @@
   width: 100%;
 }
 
-/* Pay Now 按钮 */
 .btn-paynow {
   background: #000;
   color: #fff;
@@ -129,20 +119,20 @@
 }
 
 .checkout-summary {
-  width: 280px;
+  width: 50%;
   display: flex;
   flex-direction: column;
   gap: 24px;
-  align-items: flex-start;
 }
 .summary-item {
   display: flex;
   align-items: center;
-  gap: 16px;
+  gap: 20px;
+  padding-bottom: 40px;
 }
 .summary-item img {
-  width: 80px;
-  height: 80px;
+  width: 100px;
+  height: 100px;
   border-radius: 8px;
   object-fit: cover;
 }
@@ -153,30 +143,33 @@
   gap: 4px;
 }
 .item-info .name {
-  font-size: 20px;
+  font-size: 24px;
   line-height: 1.2;
 }
 .item-info .price {
-  font-size: 20px;
+  font-size: 24px;
 }
 .qty {
-  font-size: 20px;
+  display: flex;
+  padding-left: auto;
+  font-size: 24px;
   font-weight: 600;
 }
 
 .summary-totals {
+  padding-top: 40px;
   width: 100%;
   display: flex;
   flex-direction: column;
   gap: 8px;
-  font-size: 18px;
+  font-size: 24px;
 }
 .summary-totals > div {
   display: flex;
   justify-content: space-between;
 }
 .total-row {
-  margin-top: 16px;
+  margin-top: 20px;
   font-weight: 700;
-  font-size: 20px;
+  font-size: 24px;
 }
