--- a/pages/Confirmation_of_Purchase/Confirmation_of_Purchase.css
+++ b/pages/Confirmation_of_Purchase/Confirmation_of_Purchase.css
@@ -9,42 +9,36 @@
 }
 
 .confirmation-message-container {
-  background-image: url('https://ide.code.fun/api/image?token=682dbfbfdefdb100111f8d3a&name=8fd27956850e8edb44380aaf7f33cca3.png');
-  background-size: cover; 
+  background-image: url(../../src/logo/orderpage.png);
   background-position: center;
   background-repeat: no-repeat;
-  padding: 150px 40px;
+  padding: 0px 0px; 
   width: 100%;
-  max-width: 1728px;
-  margin-right: auto;
-  margin-left: auto;
   display: flex;
   flex-direction: column;
   align-items: center; 
   justify-content: center;
-  box-sizing: border-box;
-  min-height: 100vh; 
-  height: auto;
-  margin: 0; 
   position: relative;
-}
+  aspect-ratio: 4 / 3.3;
+  background-size: 100%}
+
 
 .confirmation-title {
   color: rgb(255, 255, 255);
-  font-size: 80px;
+  font-size: clamp(120px,1.5vw,200px);
   font-family: Jost;
-  font-weight: 900;
+  font-weight: 800;
   line-height: 1.1;
-  text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5); /* 增强文字阴影 */
+  text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5); 
   z-index: 2; 
-  position: relative; /* 添加相对定位 */
+  position: relative;
 }
 
 .confirmation-button {
   background-color: rgb(0, 0, 0);
   color: rgb(255, 255, 255);
   padding: 25px 50px;
-  font-size: 28px;
+  font-size: clamp(32px,1.5vw,40px);
   font-family: Jost;
   font-weight: 300;
   line-height: 1;
@@ -55,7 +49,6 @@
 
 .confirmation-image {
   width: 100%;
-  max-width: 1728px;
   height: auto;
   display: block;
   margin-left: auto;
