--- a/pages/content_pages/content.css
+++ b/pages/content_pages/content.css
@@ -1,25 +1,21 @@
-
-
-
 .title {
-  font-size: 36px;
+  font-size: clamp(36px, 5vw, 96px);
   font-weight: 300;
   text-align: center;
   margin: 60px 0 30px;
 }
 
 .content {
-  max-width: 720px;
+  max-width: 70%;
   margin-left: auto;
   margin-right: auto;
-  font-size: 18px;
+  font-size: clamp(18px, 3vw, 48px);
   font-weight: 300;
   line-height: 1.7;
 }
 
 .content h2 {
+  font-size: clamp(18px, 3vw, 48px);
   font-weight: 400;
   margin-top: 1.8em;
 }
-
-
