--- a/pages/footer.css
+++ b/pages/footer.css
@@ -2,55 +2,35 @@
     display: flex;
     justify-content: center;
     align-items: baseline;
-    margin-top: 50px;
-    margin-bottom: 5px;
     gap: 50px;
-    padding: 0 30px;
     flex-wrap: wrap;
     width: 100%;
-    max-width: 1200px;
+    max-width: 100%;
     margin-left: auto;
     margin-right: auto;
+    padding-top: clamp(150px, 15vw, 300px);
+    padding-bottom: clamp(50px, 5vw, 100px);
 }
 
-.footer-item-divider {
-    background-color: rgb(0, 0, 0);
-    width: 100%;
-    height: 1px;
-    margin-top: 2px;
+
+.footer-gradient {
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(0, 0, 0, 0.2));
 }
 
-.footer-item{
+.footer-item {
     border-bottom: solid 1.5px rgb(0, 0, 0);
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
+  }
+  
+  
 .footer-item-text {
     color: rgb(0, 0, 0);
-    font-size: 20px;
+    font-size: clamp(16px, 2vw, 40px);
     font-family: Jost;
     font-weight: 300;
-    line-height: 20px;
+    line-height: clamp(16px, 2vw, 40px);
     text-align: center;
     flex-grow: 1;
-}
-
-
-@media (max-width: 768px) {
-    .footer-container {
-        gap: 30px;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .footer-item{
-        margin-left: 0;
-        width: auto;
-    }
-
-    .footer-item-divider {
-        width: 100%;
-    }
 }
