--- a/pages/Contact_Us_Page/Contact_Us_Page.css
+++ b/pages/Contact_Us_Page/Contact_Us_Page.css
@@ -22,6 +22,8 @@
   padding: 24px;
   border: none;
   margin-bottom: 30px;
+  font-family: Jost;
+  font-weight: 300;
   width: 100%;
   max-width: 700px;
   color: #333;
