--- a/pages/Search_Page/Search_Page.css
+++ b/pages/Search_Page/Search_Page.css
@@ -2,7 +2,7 @@
   display: flex;
   background-color: #f5f5f5;
   border-radius: 25px;
-  max-width: 300px;
+  max-width: 50%;
   margin-top: 70px;
   margin-left: auto;
   margin-right: auto;
@@ -34,4 +34,21 @@
 
 .clear-search-icon:hover {
   opacity: 1;
+}
+
+@media (max-width: 390px) {
+  .search-term-box {
+    max-width: 50%;
+  }
+
+  .current-search-term {
+    font-size: 24px;
+    margin-left: 10px;
+  }
+
+  .clear-search-icon {
+    width: 30px;
+    height: 30px;
+    margin-right: 5px;
+  }
 }
