--- a/pages/content_pages/content.css
+++ b/pages/content_pages/content.css
@@ -19,3 +19,21 @@
   font-weight: 400;
   margin-top: 1.8em;
 }
+
+@media (max-width: 390px) {
+  .title {
+    font-size: 28px;
+    margin: 40px 0 20px;
+  }
+
+  .content {
+    max-width: 85%;
+    font-size: 16px;
+    line-height: 1.5;
+  }
+
+  .content h2 {
+    font-size: 18px;
+    margin-top: 1.5em;
+  }
+}
