--- a/pages/head.css
+++ b/pages/head.css
@@ -58,7 +58,7 @@
 }
 
 .banner-content {
-  padding: 8px 20px;
+  padding: 10px 20px; 
   background-color: rgb(231, 231, 231);
   display: flex;
   flex-direction: row;
@@ -67,12 +67,11 @@
   width: 100%;
 }
 
-
 .banner-text {
   font-size: 16px;
   font-family: Jost;
   font-weight: 300;
-  line-height: 1.2;
+  line-height: 1.5;
   color: rgb(0, 0, 0);
   text-align: center;
   margin-left: auto;
@@ -80,7 +79,7 @@
   max-width: 70%; 
   white-space: nowrap;
   overflow: hidden;
-  text-overflow: ellipsis;
+  padding: 2px 0; 
 }
 
 
